--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@next/swc-win32-x64-msvc": "^16.0.0",
     "clsx": "^2.1.1",
     "cva": "^0.0.0",
     "next": "16.0.0",
