--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/swc-win32-x64-msvc": "^16.0.0",
+    "axios": "^1.13.1",
     "clsx": "^2.1.1",
     "cva": "^0.0.0",
     "next": "16.0.0",
